# rustybot-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  auth.yml  docker-compose.yml  log4rs.yml  version.yml
.github/: dependabot.yml
.github/workflows/: docker.yml  dockerhub.yml
rustybot-macros/: Cargo.toml
rustybot-macros/src/: lib.rs
rustybot-server/: Cargo.toml
rustybot-server/src/: auth.rs  lib.rs  main.rs  middleware.rs  request.rs
rustybot-server/src/models/: auth.rs  chat.rs  message.rs  mod.rs  quota.rs  user.rs
rustybot-server/src/models/helper/: auth.rs  chat.rs  message.rs  mod.rs  user.rs
rustybot-server/src/types/: version.rs
rustybot-server/src/utils/: config.rs  db.rs  mod.rs  sql.rs
src/: auth.rs  lib.rs  main.rs  middleware.rs  request.rs
src/libs/: job.rs  mod.rs  mqtt.rs
src/models/: mod.rs  queued.rs  request.rs  response.rs
src/utils/: config.rs  mod.rs  redis.rs
