[package]
name = "rustybot-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-tcp-channel = "0.1.1"
log = "0.4.17"
log4rs = "1.2.0"
redis = "0.23.0"
rust-ai = "0.1.10"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.21"
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }


[lib]
crate-type = ["lib"]
