[package]
name = "rustybot-server"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustybot-macros = { path = "../rustybot-macros" }
actix-identity = "0.5.2"
actix-service = "2.0.2"
actix-web = { version = "4.3.1", features = ["rustls"] }
async-stream = "0.3.5"
base16ct = "0.2.0"
bytes = "1.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
paste = "1.0.12"
regex = "1.8.1"
reqwest = { version = "0.11.16", default-features = false, features = [
  "rustls-tls",
  "rustls-tls-native-roots",
  "stream",
  "json",
] }
rust-ai = "0.1.16"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.21"
sha2 = "0.10.6"
sqlx = { version = "0.6.3", features = [
  "default",
  "all-types",
  "runtime-tokio-rustls",
  "mysql",
] }
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4"] }


[lib]
crate-type = ["lib"]
